commit de prueba en texstudio

--- a/Plantilla.tex
+++ b/Plantilla.tex
@@ -24,6 +24,7 @@
 \declaretheorem[shaded={rulecolor=Emerald, rulewidth=2pt, bgcolor=White, textwidth=0.99\textwidth}]{Despeje}
 \begin{document}
 	
+hola mundo
 
 
 \end{document}
