Agregado el felder a la bibliografia

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -50,3 +50,10 @@
 	edition = {1},
 	publisher = {Pearson Educación},
 }
+@book{felder,
+	author = {Richard M Felder and Ronald W Rousseau},
+	title = {Principios elementales de los procesos químicos},
+	date = {2004},
+	edition = {3},
+	publisher = {Limusa Wiley},
+}
