Mas texto agregado

--- a/Equilibrio Liquido Vapor en Mezclas Binarias.tex
+++ b/Equilibrio Liquido Vapor en Mezclas Binarias.tex
@@ -36,5 +36,13 @@ NFSSFamily=cmbr]
 	
 	\section{Equilibrio líquido vapor en disoluciones binarias}
 	
-	Suponga que un recipiente cerrado contiene una mezcla de varios componentes líquidos volátiles que se calienta poco a poco y que la presión se mantiene constante. A medida que se agrega calor, la temperatura de la mezcla aumenta hasta que alcanza una temperatura en la cual se forma la primera burbuja de vapor. Hasta este momento, el proceso es igual al de un líquido puro. Sin embargo, en una mezcla, el vapor generado casi siempre tendrá una composición diferente de la del líquido. Conforme avanza la vaporización, la composición del líquido restante cambia de forma continua, y en consecuencia también varía su temperatura de vaporización. \cita{felder}
+	\subsection{Introducción}
+	
+	Suponga que un recipiente cerrado contiene una mezcla de varios componentes líquidos volátiles que se calienta poco a poco y que la presión se mantiene constante. A medida que se agrega calor, la temperatura de la mezcla aumenta hasta que alcanza una temperatura en la cual se forma la primera burbuja de vapor. Hasta este momento, el proceso es igual al de un líquido puro. Sin embargo, en una mezcla, el vapor generado casi siempre tendrá una composición diferente de la del líquido. Conforme avanza la vaporización, la composición del líquido restante cambia de forma continua, y en consecuencia también varía su temperatura de vaporización. Un fenómeno semejante ocurre cuando se somete una mezcla de vapores a un proceso de condensación a presión constante: a una temperatura dada se forma la primer gota de líquido, y desde ese momento la composición del vapor y la temperatura de condensación cambian de forma continua. 
+	
+	Cuando se calienta con lentitud un líquido a presión constante, la temperatura a la cual se forma la primera burbuja de vapor es la \textbf{temperatura del punto de burbuja} del líquido a la presión dada. Cuando se enfría despacio un gas (vapor) a presión constante, la temperatura a la cual se forma la primera gota de líquido se llama \textbf{temperatura de punto de rocío} a la presión dada. El cálculo de las temperaturas del punto de burbuja y del punto de rocío puede ser una tarea compleja para una mezcla arbitraria de componentes. Sin embargo, si el líquido se comporta como solución ideal (cuando todos sus componentes obedecen la ley de Raoult o la de Henry), y la fase gaseosa también se puede considerar ideal, los cálculos son bastante directos.\cita{felder}
+	
+	Un sistema aislado que consta de las fases en contacto estrecho líquida y vapor, con el tiempo alcanza un estado final en donde no existe tendencia para que suceda un cambio dentro del mismo. La temperatura, la presión y las composiciones de fase logran los valores finales que en adelante permanecen fijos. El sistema se halla en equilibrio. A pesar de eso, en el nivel microscópico no son estáticas las condiciones. Las moléculas contenidas en una fase en un instante dado son diferentes a las que después ocupan la misma fase. Las moléculas con velocidades lo suficiente altas próximas a la zona interfacial superan las fuerzas superficiales y atraviesan a la otra fase. De cualquier modo, la rapidez promedio de intercambio de moléculas es igual en ambas direcciones, sin que ocurra transferencia neta de material a través de la zona interfacial.
+	
+	
 \end{document}
