agregado el smith van ness

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -57,3 +57,11 @@
 	edition = {3},
 	publisher = {Limusa Wiley},
 }
+
+@book{smith-vanness,
+	author = {J M Smith and H C {Van Ness} and M M Abbott},
+	title = {Introducción a la termdinánica en ingeniería química},
+	date = {2007},
+	edition = {7},
+	publisher = {McGraw-Hill Interamericana},
+}
