--- a/Equilibrio Liquido Vapor en Mezclas Binarias.tex
+++ b/Equilibrio Liquido Vapor en Mezclas Binarias.tex
@@ -32,6 +32,9 @@ NFSSFamily=cmbr]
 \declaretheorem[shaded={rulecolor=Cerulean, rulewidth=2pt, bgcolor=White, textwidth=0.99\textwidth}]{Ley}
 \declaretheorem[shaded={rulecolor=Emerald, rulewidth=2pt, bgcolor=White, textwidth=0.99\textwidth}]{Despeje}
 \newcommand{\cita}[1]{(\cite{#1})}
+
+\setlength{\parskip}{3 mm}
+\renewcommand{\baselinestretch}{1.3	}
 \begin{document}
 	
 	\section{Equilibrio líquido vapor en disoluciones binarias}
@@ -42,7 +45,8 @@ NFSSFamily=cmbr]
 	
 	Cuando se calienta con lentitud un líquido a presión constante, la temperatura a la cual se forma la primera burbuja de vapor es la \textbf{temperatura del punto de burbuja} del líquido a la presión dada. Cuando se enfría despacio un gas (vapor) a presión constante, la temperatura a la cual se forma la primera gota de líquido se llama \textbf{temperatura de punto de rocío} a la presión dada. El cálculo de las temperaturas del punto de burbuja y del punto de rocío puede ser una tarea compleja para una mezcla arbitraria de componentes. Sin embargo, si el líquido se comporta como solución ideal (cuando todos sus componentes obedecen la ley de Raoult o la de Henry), y la fase gaseosa también se puede considerar ideal, los cálculos son bastante directos.\cita{felder}
 	
-	Un sistema aislado que consta de las fases en contacto estrecho líquida y vapor, con el tiempo alcanza un estado final en donde no existe tendencia para que suceda un cambio dentro del mismo. La temperatura, la presión y las composiciones de fase logran los valores finales que en adelante permanecen fijos. El sistema se halla en equilibrio. A pesar de eso, en el nivel microscópico no son estáticas las condiciones. Las moléculas contenidas en una fase en un instante dado son diferentes a las que después ocupan la misma fase. Las moléculas con velocidades lo suficiente altas próximas a la zona interfacial superan las fuerzas superficiales y atraviesan a la otra fase. De cualquier modo, la rapidez promedio de intercambio de moléculas es igual en ambas direcciones, sin que ocurra transferencia neta de material a través de la zona interfacial.
+	Un sistema aislado que consta de las fases en contacto estrecho líquida y vapor, con el tiempo alcanza un estado final en donde no existe tendencia para que suceda un cambio dentro del mismo. La temperatura, la presión y las composiciones de fase logran los valores finales que en adelante permanecen fijos. El sistema se halla en equilibrio. A pesar de eso, en el nivel microscópico no son estáticas las condiciones. Las moléculas contenidas en una fase en un instante dado son diferentes a las que después ocupan la misma fase. Las moléculas con velocidades lo suficiente altas próximas a la zona interfacial superan las fuerzas superficiales y atraviesan a la otra fase. De cualquier modo, la rapidez promedio de intercambio de moléculas es igual en ambas direcciones, sin que ocurra transferencia neta de material a través de la zona interfacial. \cita{smith-vanness}
 	
+		\printbibliography[title={Libros}]
 	
 \end{document}
