agregado el castellan

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -65,3 +65,10 @@
 	edition = {7},
 	publisher = {McGraw-Hill Interamericana},
 }
+@book{castellan,
+	author = {Gilbert W Castellan},
+	title = {Fisicoquímica},
+	date = {1987},
+	edition = {2},
+	publisher = {Addison Wesley Longman de México},
+}
