--- a/Equilibrio Liquido Vapor en Mezclas Binarias.tex
+++ b/Equilibrio Liquido Vapor en Mezclas Binarias.tex
@@ -47,6 +47,23 @@ NFSSFamily=cmbr]
 	
 	Un sistema aislado que consta de las fases en contacto estrecho líquida y vapor, con el tiempo alcanza un estado final en donde no existe tendencia para que suceda un cambio dentro del mismo. La temperatura, la presión y las composiciones de fase logran los valores finales que en adelante permanecen fijos. El sistema se halla en equilibrio. A pesar de eso, en el nivel microscópico no son estáticas las condiciones. Las moléculas contenidas en una fase en un instante dado son diferentes a las que después ocupan la misma fase. Las moléculas con velocidades lo suficiente altas próximas a la zona interfacial superan las fuerzas superficiales y atraviesan a la otra fase. De cualquier modo, la rapidez promedio de intercambio de moléculas es igual en ambas direcciones, sin que ocurra transferencia neta de material a través de la zona interfacial. \cita{smith-vanness}
 	
-		\printbibliography[title={Libros}]
+	\subsection{Características de las soluciones ideales}
+	
+	Considérese una solución compuesta de varías sustancias volátiles en un recipiente. Como los componentes son todos volátiles, parte de la solución se evapora para llenar con vapor el espacio sobre el líquido. Cuando la solución alcanza el equilibrio a una temperatura, la presión total en el recipiente es la suma de las presiones parciales de los diferentes componentes de la solución (ecuación \ref{sumapp}). \cita{castellan}
+	
+	\begin{equation}
+		P = P_1 + P_2 + \cdots + P_i \label{sumapp}
+	\end{equation}
+	
+	Para una solución ideal la presión parcial en el equilibrio 
+	
+	\begin{Ley}[De Raoult]
+
+	\end{Ley}
+
+	
+	
+	
+	\printbibliography[title={Referencias}]
 	
 \end{document}
