Mas texto agregado y mas libros agregados  a las referencias

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -42,10 +42,9 @@
 	edition = {6},
 	publisher = {Pearson Educación},
 }
-
 @book{santos,
 	author = {Fernando {Escaso Santos} and José Luis {Martínez Guitarte}},
-	title = {Fundamenos básicos de fisiología vegetal y animal},
+	title = {Fundamentos básicos de fisiología vegetal y animal},
 	date = {2010},
 	edition = {1},
 	publisher = {Pearson Educación},
@@ -57,7 +56,6 @@
 	edition = {3},
 	publisher = {Limusa Wiley},
 }
-
 @book{smith-vanness,
 	author = {J M Smith and H C {Van Ness} and M M Abbott},
 	title = {Introducción a la termdinánica en ingeniería química},
@@ -71,4 +69,18 @@
 	date = {1987},
 	edition = {2},
 	publisher = {Addison Wesley Longman de México},
+}
+@book{tortora,
+	author = {Gerard J Tortora and Berdell R Funke and Christine L Case},
+	title = {Introducción a la microbiología},
+	date = {2007},
+	edition = {9},
+	publisher = {Editorial Médica Panamericana},
+}
+@book{lisker,
+	author = {Rubén Lisker and Patricia {Grether González} and Alejandro {Zentella Dehesa}},
+	title = {Introducción a la genética humana},
+	date = {2013},
+	edition = {3},
+	publisher = {El Manual Moderno},
 }
