--- a/Equilibrio Liquido Vapor en Mezclas Binarias.tex
+++ b/Equilibrio Liquido Vapor en Mezclas Binarias.tex
@@ -49,7 +49,7 @@ NFSSFamily=cmbr]
 	
 	\subsection{Características de las soluciones ideales}
 	
-	Considérese una solución compuesta de varías sustancias volátiles en un recipiente. Como los componentes son todos volátiles, parte de la solución se evapora para llenar con vapor el espacio sobre el líquido. Cuando la solución alcanza el equilibrio a una temperatura, la presión total en el recipiente es la suma de las presiones parciales de los diferentes componentes de la solución (ecuación \ref{sumapp}). \cita{castellan}
+	Considérese una solución compuesta de varías sustancias volátiles en un recipiente. Como los componentes son todos volátiles, parte de la solución se evapora para llenar con vapor el espacio sobre el líquido. Cuando la solución alcanza el equilibrio a una temperatura, la presión total en el recipiente es la suma de las presiones parciales de los diferentes componentes de la solución (ecuación \ref{sumapp}). \parencite{castellan}
 	
 	\begin{equation}
 		P = P_1 + P_2 + \cdots + P_i \label{sumapp}
