--- a/Indice de libros.tex
+++ b/Indice de libros.tex
@@ -8,7 +8,7 @@
 \usepackage{cmbright}
 \usepackage{graphicx}
 \usepackage{csquotes}
-\usepackage[backend=biber, style=apa]{biblatex} %Biblo APA
+\usepackage[backend=biber, style=apa, block=space]{biblatex} %Biblo APA
 \DeclareLanguageMapping{spanish}{spanish-apa} %Idioma Apa
 \addbibresource{Biblioteca.bib} %Archivo .bib
 \usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
