Mas libros agregados y cambiado el bibitemsep

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -84,3 +84,19 @@
 	edition = {3},
 	publisher = {El Manual Moderno},
 }
+
+@book{macfaddin,
+	author = {Jean F MacFaddin},
+	title = {Pruebas bioquímicas para la identificación de bacterias de importancia clínica},
+	date = {2003},
+	edition = {3},
+	publisher = {Editorial Médica Panamericana},
+}
+
+@book{blocher,
+	author = {Edward J Blocher and David E Stout and Gary Cokins and Kung H Chen},
+	title = {Administración de costos },
+	date = {2008},
+	edition = {4},
+	publisher = {McGraw-Hill Interamericana},
+}
