--- a/Indice de libros.tex
+++ b/Indice de libros.tex
@@ -11,6 +11,7 @@
 \usepackage[backend=biber, style=apa, block=space]{biblatex} %Biblo APA
 \DeclareLanguageMapping{spanish}{spanish-apa} %Idioma Apa
 \addbibresource{Biblioteca.bib} %Archivo .bib
+\setlength{\bibitemsep}{0.6\baselineskip}
 \usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
 \nocite{*}
 \begin{document}
