Mas libros actualizados

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -1,6 +1,6 @@
 @book{biocurtis,
 	author = {Helena Curtis and N Sue Barnes and Adriana Schnek and Alicia Massarini},
-	title = {Curtis. Biología},
+	title = {Biología},
 	date = {2008},
 	edition = {7},
 	publisher = {Editorial Médica Panamericana},
@@ -58,7 +58,7 @@
 }
 @book{smith-vanness,
 	author = {J M Smith and H C {Van Ness} and M M Abbott},
-	title = {Introducción a la termdinánica en ingeniería química},
+	title = {Introducción a la termodinámica en ingeniería química},
 	date = {2007},
 	edition = {7},
 	publisher = {McGraw-Hill Interamericana},
@@ -84,7 +84,6 @@
 	edition = {3},
 	publisher = {El Manual Moderno},
 }
-
 @book{macfaddin,
 	author = {Jean F MacFaddin},
 	title = {Pruebas bioquímicas para la identificación de bacterias de importancia clínica},
@@ -92,11 +91,41 @@
 	edition = {3},
 	publisher = {Editorial Médica Panamericana},
 }
-
 @book{blocher,
 	author = {Edward J Blocher and David E Stout and Gary Cokins and Kung H Chen},
 	title = {Administración de costos },
 	date = {2008},
+	subtitle = {Un enfoque estratégico},
 	edition = {4},
 	publisher = {McGraw-Hill Interamericana},
+}
+
+@book{bravo,
+	author = {Óscar Gómez Bravo},
+	title = {Contabilidad de costos},
+	date = {2005},
+	edition = {5},
+	publisher = {McGraw-Hill Interamericana},
+}
+@book{baca,
+	author = {Gabriel {Baca Urbina}},
+	title = {Evaluación de proyectos},
+	date = {2010},
+	edition = {6},
+	publisher = {McGraw-Hill Interamericana},
+}
+@book{urbina,
+	author = {Gabriel {Baca Urbina}},
+	title = {Fundamentos de ingeniería económica},
+	date = {2010},
+	edition = {5},
+	publisher = {McGraw-Hill Interamericana},
+}
+@book{robbins,
+	author = {Allan H Robbins and Wilhelm C Miller},
+	title = {Análisis de circuitos},
+	date = {2008},
+	subtitle = {Teoría y práctica},
+	edition = {4},
+	publisher = {Cengage Learning},
 }
