un libro con el Jr puesto

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -129,3 +129,10 @@
 	edition = {4},
 	publisher = {Cengage Learning},
 }
+@book{hayt,
+	author = { Hayt, Jr., William H and Jack E Kemmerly and Steven M Durbin},
+	title = {Análisis de circuitos en ingeniería},
+	date = {2012},
+	edition = {8},
+	publisher = {McGraw-Hill Interamericana},
+}
