algunos libros más agregados

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -136,3 +136,17 @@
 	edition = {8},
 	publisher = {McGraw-Hill Interamericana},
 }
+@book{fraile,
+	author = {Jesús {Fraile Mora}},
+	title = {Circuitos eléctricos},
+	date = {2012},
+	edition = {1},
+	publisher = {Pearson Educación},
+}
+@book{dorf,
+	author = {Richard C Dorf and James A Svoboda},
+	title = {Circuitos eléctricos},
+	date = {2011},
+	edition = {8},
+	publisher = {Alfaomega},
+}
