Libro de calculo de balances de materia

--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -150,3 +150,11 @@
 	edition = {8},
 	publisher = {Alfaomega},
 }
+@book{henley,
+	author = {Ernest J Henley and Edward M Rosen},
+	title = {Cálculos de balances de materia y energía},
+	date = {1973},
+	subtitle = {Métodos manuales y empleo de máquinas calculadoras},
+	edition = {1},
+	publisher = {Editorial Reverté},
+}
