--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -158,3 +158,11 @@
 	edition = {1},
 	publisher = {Editorial Reverté},
 }
+@book{villaseñor,
+	author = {Jorge Raúl {Villaseñor Gómez}},
+	title = {Circuitos eléctricos y electrónicos},
+	date = {2011},
+	subtitle = {Fundamentos y técnicas para su análisis},
+	edition = {1},
+	publisher = {Pearson Educación},
+}
