--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -166,3 +166,11 @@
 	edition = {1},
 	publisher = {Pearson Educación},
 }
+
+@book{crane,
+	author = {{División de ingeniería de Crane}},
+	title = {Flujo de fluidos en valvulas, accesorios y tuberías},
+	date = {1989},
+	edition = {1},
+	publisher = {McGraw-Hill},
+}
