--- a/Biblioteca.bib
+++ b/Biblioteca.bib
@@ -174,3 +174,10 @@
 	edition = {1},
 	publisher = {McGraw-Hill},
 }
+@book{merle,
+	author = {Merla C Potter and David C Wiggert and Bassem Ramadan},
+	title = {Mécanica de fluidos},
+	date = {2012},
+	edition = {4},
+	publisher = {Cengage Learning},
+}
