--- a/Flujo de Fluidos.tex
+++ b/Flujo de Fluidos.tex
@@ -4,7 +4,7 @@
 \begin{document}
 	\section{Introducción}
 	
-	El método más común para transportar fluidos de un punto a otro es impulsarlo a través de un sistema de tuberías. Las tuberías de sección circular son las más frecuentes, ya que esta forma ofrece no solo mayor resistencia estructural sino también mayor sección transversal para el mismo perímetro exterior que cualquier otra forma. \parencite{crane}
+	El método más común para transportar fluidos de un punto a otro es impulsarlo a través de un sistema de tuberías. Las tuberías de sección circular son las más frecuentes, ya que esta forma ofrece no solo mayor resistencia estructural sino también mayor sección transversal para el mismo perímetro exterior que cualquier otra forma. \parencite[1.1]{crane}
 	
 	\section{Propiedades físicas de los fluidos}
 	
@@ -12,11 +12,15 @@
 	
 	\subsection{Viscosidad}
 	
-	La viscosidad expresa la facilidad que tiene un fluido para fluir cuando se le aplica una fuerza externa. La viscosidad absoluta de un fluido, es una medida de su resistencia al desplazamiento o  a sufrir deformaciones internas.
+	La viscosidad expresa la facilidad que tiene un fluido para fluir cuando se le aplica una fuerza externa. La viscosidad absoluta de un fluido, es una medida de su resistencia al desplazamiento o  a sufrir deformaciones internas. \parencite[1.2]{crane}
 	
 	\subsection{Densidad}
 	
-	La densidad de una sustancia es su masa por unidad de volumen.
+	La densidad de una sustancia es su masa por unidad de volumen \parencite{crane}. En el estudio de los fluidos es conveniente suponer que los fluidos están continuamente distribuidos en toda una región de interés, es decir es tratado como un medio continuo. La principal propiedad que se usa para determinar si la suposición de medio continuo es apropiada es la densidad.\parencite[10]{merle}
+	
+	\section{Presión}
+	
+	El flujo de fluidos en tuberías está siempre acompañado de rozamiento de las partículas del fluido entre sí y, consecuentemente, por la pérdida de energía disponible, en otras palabras, tiene que existir una perdida de presión en el sentido del flujo. \parencite[1.7]{crane}
 	
 	\printbibliography[title={Referencias}]
 	
