Empieza la estructura en carpetas

--- a/preambulo.tex
+++ b/preambulo.tex
@@ -17,5 +17,5 @@ NFSSFamily=cmbr]
 \usepackage[dvipsnames]{xcolor} %paquete de colores
 \usepackage[backend=biber, style=apa]{biblatex} %Biblo APA
 \DeclareLanguageMapping{spanish}{spanish-apa} %Idioma Apa
-\addbibresource{Biblioteca.bib} %Archivo .bib
+\addbibresource{Libros/Biblioteca.bib} %Archivo .bib
 \setlength{\bibitemsep}{0.5\baselineskip}
