Listo el uso del primer eps

--- a/Flujo de Fluidos.tex
+++ b/Flujo de Fluidos.tex
@@ -22,6 +22,10 @@
 	
 	El flujo de fluidos en tuberías está siempre acompañado de rozamiento de las partículas del fluido entre sí y, consecuentemente, por la pérdida de energía disponible, en otras palabras, tiene que existir una perdida de presión en el sentido del flujo. \parencite[1.7]{crane}
 	
+	\begin{center}
+		\includegraphics[width=0.6\linewidth]{Vectores/Tuberia_manometros}
+	\end{center}
+	
 	\printbibliography[title={Referencias}]
 	
 \end{document}
