--- a/preambulo.tex
+++ b/preambulo.tex
@@ -18,4 +18,5 @@ NFSSFamily=cmbr]
 \usepackage[backend=biber, style=apa]{biblatex} %Biblo APA
 \DeclareLanguageMapping{spanish}{spanish-apa} %Idioma Apa
 \addbibresource{Libros/Biblioteca.bib} %Archivo .bib
-\setlength{\bibitemsep}{0.5\baselineskip}
+\setlength{\bibitemsep}{0.5\baselineskip} %espaciado entre referencias
+\usepackage{epstopdf} %Agregar archivos svg
