Cambios en el flujo de fluidos

--- a/preambulo.tex
+++ b/preambulo.tex
@@ -20,3 +20,4 @@ NFSSFamily=cmbr]
 \addbibresource{Libros/Biblioteca.bib} %Archivo .bib
 \setlength{\bibitemsep}{0.5\baselineskip} %espaciado entre referencias
 \usepackage{epstopdf} %Agregar archivos svg
+\usepackage{float}
