--- a/Flujo de Fluidos.tex
+++ b/Flujo de Fluidos.tex
@@ -20,11 +20,14 @@
 	
 	\section{Presión}
 	
-	El flujo de fluidos en tuberías está siempre acompañado de rozamiento de las partículas del fluido entre sí y, consecuentemente, por la pérdida de energía disponible, en otras palabras, tiene que existir una perdida de presión en el sentido del flujo. \parencite[1.7]{crane}
+	El flujo de fluidos en tuberías está siempre acompañado de rozamiento de las partículas del fluido entre sí y, consecuentemente, por la pérdida de energía disponible, en otras palabras, tiene que existir una perdida de presión en el sentido del flujo. Si se conectaran dos manómetros a una tubería por la que pasa un fluido como en \ref{tuberia}, el manómetro $P_1$, indicara una presión estática mayor que el manómetro $P_2$ \parencite[1.7]{crane}
 	
-	\begin{center}
-		\includegraphics[width=0.6\linewidth]{Vectores/Tuberia_manometros}
-	\end{center}
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.6\linewidth]{Vectores/Tuberia_manometros}
+			\caption{La flecha indica el sentido del flujo. Figura adaptada de \parencite[1.7]{crane}}
+			\label{tuberia}
+		\end{figure}
 	
 	\printbibliography[title={Referencias}]
 	
