Cambios en el flujo de fluidos

--- a/Flujo de Fluidos.tex
+++ b/Flujo de Fluidos.tex
@@ -20,7 +20,7 @@
 	
 	\section{Presión}
 	
-	El flujo de fluidos en tuberías está siempre acompañado de rozamiento de las partículas del fluido entre sí y, consecuentemente, por la pérdida de energía disponible, en otras palabras, tiene que existir una perdida de presión en el sentido del flujo. Si se conectaran dos manómetros a una tubería por la que pasa un fluido como en \ref{tuberia}, el manómetro $P_1$, indicara una presión estática mayor que el manómetro $P_2$ \parencite[1.7]{crane}
+	El flujo de fluidos en tuberías está siempre acompañado de rozamiento de las partículas del fluido entre sí y, consecuentemente, por la pérdida de energía disponible, en otras palabras, tiene que existir una perdida de presión en el sentido del flujo. Si se conectaran dos manómetros a una tubería por la que pasa un fluido como en la figura \ref{tuberia}, el manómetro $P_1$, indicara una presión estática mayor que el manómetro $P_2$ \parencite[1.7]{crane}
 	
 		\begin{figure}[H]
 			\centering
