Agregado balance de momento

--- a/Libros/Biblioteca.bib
+++ b/Libros/Biblioteca.bib
@@ -180,3 +180,17 @@
 	edition = {4},
 	publisher = {Cengage Learning},
 }
+@book{holler,
+	author = {Douglas A Skoog and Donald M West and F James Holler and Stanley R Crouch},
+	title = {Fundamentos de química analítica},
+	date = {2015},
+	edition = {9},
+	publisher = {Cengage Learning},
+}
+@book{skoog,
+	author = {Douglas A Skoog and F James Holler and Stanley R Crouch},
+	title = {Principios de análisis instrumental},
+	date = {2008},
+	edition = {9},
+	publisher = {Cengage Learning},
+}
