--- a/Despejes.tex
+++ b/Despejes.tex
@@ -67,13 +67,27 @@
 	
 	Se define al inverso de un número con respecto a una operación binaria a aquel, que al ser usado como segundo argumento de la operación binaria junto con el número original el resultado es el elemento neutro de dicha operación.
 	
-	\begin{definición}[Inverso de un número con respecto a una operación binaria]
+	\begin{definición}[Inverso de un número con respecto a una operación binaria] \label{def:inv}
 		Sea $a$ un número cualquiera y $n$ el elemento neutro de una operación binaria $\circ$
 		\begin{equation}
 			a \circ I = n \label{ec:inv}
 		\end{equation}
 		Entonces "$I$" es el inverso de $a$ con respecto a la operación $\circ$
 	\end{definición}
+	
+	Derivado de la definición \ref{def:inv}, entonces el inverso del número "$a$" con respecto a la suma es el número "$-a$", ya que
+	\begin{equation}
+		a + (-a) = 0
+	\end{equation}
+
+	Al inverso con respecto a la suma de un número también se le conoce como inverso aditivo.
+	
+	Siguiendo con lo descrito en la definición \ref{def:inv}, el inverso de un número "$a$" con respecto a la multiplicación o recíproco de "$a$" es "$a^{-1}$", ya que
+	
+	\begin{equation}
+		a \cdot a^{-1} = 1
+	\end{equation}
+	
 	
 	
 	
